--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'percent' from 'scripts.Loss' (/Users/tkhstudent/Desktop/Week7Project/scripts/Loss.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/wd/s05wlnn97dnbmv2_tykv4krw0000gp/T/ipykernel_9494/397390786.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTotalAmt\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAll\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mInflation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0myearly_inf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLoss\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpercent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprincipal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Enter the amount you want to start with: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'percent' from 'scripts.Loss' (/Users/tkhstudent/Desktop/Week7Project/scripts/Loss.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You started with $10.00 invested\n",
+      "This is how much you have earned in Compound interest: $2.16\n",
+      "Your total investment is now worth: $12.16\n",
+      "Your money has lost purchasing power of : $8.71 over the course of 4 years\n",
+      "Your dollar saved would be worth: 87% percent less\n",
+      "Congrats thanks to investing you beat inflation!!\n"
      ]
     }
    ],
@@ -21,7 +22,7 @@
     "\n",
     "# Asking the user for a  principal amount,\n",
     "# The time they will let their investment grow\n",
-    "#We will import functions for calculation the inflation   \n",
+    "#We will import functions for calculating the inflation   \n",
     "\n",
     "from scripts.Interest import interest\n",
     "from scripts.TotalAmt import All\n",
@@ -29,7 +30,7 @@
     "from scripts.Loss import percent\n",
     "\n",
     "principal = float(input('Enter the amount you want to start with: '))\n",
-    "time = float(input('Enter the time you will leave it growing for in years: '))\n",
+    "time = int(input('Enter the time you will leave it growing for in years: '))\n",
     "#The average return rate for the stock market is %8 based on the last 20 years\n",
     "rate = float(input('Enter the interest rate you would expect: '))\n",
     "\n",
@@ -37,22 +38,23 @@
     "Compound = interest(principal, time, rate)\n",
     "T = All(Compound,principal)\n",
     "Y = yearly_inf(principal,time)\n",
-    "L = percent(principal, time)\n",
-    "\n",
-    "\n",
+    "L = percent(Y, principal)\n",
     "\n",
     "\n",
     "\n",
     "#Average inflation rate in the last 20 years for the US has been about %3.5\n",
     "#We will also use this to compare how much purchasing power you have lost\n",
-    "#Purchasing power means how much less your dollar is worth now\n",
+    "#Purchasing power means how much less your dollar is worth now \n",
     "\n",
     "\n",
     "# Displaying result\n",
-    "print('This is how much you have earned in Compound interest: %f' % (Compound))\n",
-    "print('Your total investment is now worth: %f' %  (T))\n",
-    "print('Your money has lost purchasing power of : %f' % (Y) + ' over the course of ' + str(time) + ' ' + 'years')\n",
-    "print('Your dollar is worth: %f' % (L) + 'percent less')\n",
+    "print('You started with ' +  '${:,.2f}'.format(principal)\n",
+    " + ' invested')\n",
+    "print('This is how much you have earned in Compound interest: ' + '${:,.2f}'.format(Compound))\n",
+    "print('Your total investment is now worth: ' + '${:,.2f}'.format(T))\n",
+    "print('Your money has lost purchasing power of : ' + '${:,.2f}'.format(Y) + ' over the course of ' + str(time) + ' ' + 'years')\n",
+    "print('Your dollar saved would be worth: ' + '{0:.0f}%'.format(L) + ' percent less')\n",
+    "print('Congrats thanks to investing you beat inflation!!')\n",
     "\n"
    ]
   }
